--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .cabecalho-bk{
-    background-color: rgb(17, 17, 45);
+    background-color: #22272F;
     padding: 30px 30px 0;
     display: block;
 }
@@ -28,8 +28,12 @@
 .contato p{
     margin-bottom: 25px;
 }
+.contato ul{
+    margin-left: 0;
+}
 .contato li{
     margin-bottom: 15px;
+    list-style: none;
 }
 .contato h1{
     font-size: 1.5rem;
@@ -41,18 +45,168 @@
 }
 
 main{
-    width: 60%;
+    width: 100%;
+    padding: 0 30px 30px 30px;
     margin: 0 auto;
+    max-width: 1200px;
+    
+}
+p{
+    line-height: 25px;
 }
 .colunas{
     display: flex;
+    
 }
 section{
-    border: 2px solid pink;
+    border: 2px solid #1C92FF;
     padding: 20px;
+    margin: 20px 10px;
 }
-h2,h3{
+
+h2{
     font-size: 1.5rem;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     font-weight: bold;
 }
+h3{
+    font-size: 1.25rem;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+h4{
+    margin-bottom: 10px;
+}
+.cargo{
+    margin: 20px 0;
+}
+.coluna-esquerda section{
+    height: 300px;
+}
+.colunas li{
+    margin: 15px 0;
+}
+.coluna-direita section{
+    width: 400px;
+}
+.perfil-profissional{
+    height: 600px !important;
+    font-size: 1rem;
+    line-height: normal;
+}
+
+.footer-bg{
+    background-color: #22272F;
+    display: inline-block;
+    width: 100%;
+    font-size: 1.5em;
+    color: white;
+    text-align: center;
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    margin: 0 auto;
+    padding: 15px;
+}
+.footer-name{
+    display: flex;
+    align-items: center;
+    text-align: left;
+    position: relative;
+}
+.footer-name p,span{
+    font-weight: 600;
+}
+.nome{
+    font-size: 1.5rem;
+}
+.coroa{
+    width: 1.4em;
+    margin-left: 3px;
+    display: inline-block;
+    position: absolute;
+    margin: -6px 2px 2px 2px;
+}
+
+
+.card {
+    display: flex;
+    height: 70px;
+    width: 270px;
+  }
+  
+  .card svg {
+    position: absolute;
+    display: flex;
+    width: 45%;
+    height: 100%;
+    font-size: 24px;
+    font-weight: 700;
+    opacity: 1;
+    transition: opacity 0.25s;
+    z-index: 2;
+    cursor: pointer;
+  
+  }
+  
+  .card .social-link1,.card .social-link2,.card .social-link3,.card .social-link4 {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.25s;
+    border-radius: 50px;
+  }
+  
+  .card svg {
+    transform: scale(1);
+  }
+  
+  .card .social-link1:hover {
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    animation: bounce_613 0.4s linear;
+  }
+  
+  .card .social-link2:hover {
+    background-color: #121314;
+    animation: bounce_613 0.4s linear;
+  }
+  
+  .card .social-link3:hover {
+    background-color: #0a66c2;
+    animation: bounce_613 0.4s linear;
+  }
+  
+  .card .social-link4:hover {
+    background-color: #12a50b;
+    animation: bounce_613 0.4s linear;
+  }
+  
+  @keyframes bounce_613 {
+    40% {
+      transform: scale(1.4);
+    }
+  
+    60% {
+      transform: scale(0.8);
+    }
+  
+    80% {
+      transform: scale(1.2);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
