--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .cabecalho-bk{
-    background-color: #22272F;
+    background-color: #1C92FF;
     padding: 30px 30px 0;
     display: block;
 }
@@ -9,21 +9,27 @@
     width: 100%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 30px;
     max-width: 1200px;
     
     
 }
+.foto{
+    width: 600px;
+}
 .foto img{
     width: 300px;
     border-radius: 50%;
+    display: block;
 }
 .contato{
-    display: block;
+    display: inline-block;
     text-align: left;
-    width: 350px;    
+    margin-right: 10px;
+    flex-basis: 400px;
+      
 }
 .contato p{
     margin-bottom: 25px;
@@ -38,6 +44,7 @@
 .contato h1{
     font-size: 1.5rem;
     margin-bottom: 5px;
+    font-weight: bold;
 }
 .contato p{
     font-size: 1.225rem;
