--- a/style.css
+++ b/style.css
@@ -88,9 +88,6 @@ h4{
 .colunas li{
     margin: 15px 0;
 }
-.coluna-esquerda section{
-    
-}
 .cursos i{
     font-size: 0.9em;
 }
@@ -225,6 +222,17 @@ h4{
       transform: scale(1);
     }
   }
+::-webkit-scrollbar {
+	width: 7px;
+	background-color: rgb(35, 38, 41);
+}
+::-webkit-scrollbar-thumb {
+	background-color: #1C92FF;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}  
 
 @media screen and (max-width: 800px) {
     /*cabeçalho*/
