--- a/style.css
+++ b/style.css
@@ -684,7 +684,7 @@ section{
     padding: 20px;
     margin: 20px 10px;
     position: relative;
-    
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 section::before{
   content: '';
