--- a/style.css
+++ b/style.css
@@ -1110,3 +1110,73 @@ body.active .contato p{
     width: 40%;
   }  
 }
+
+@media print{
+  /*Botão StarWars*/
+  label{
+    display: none;
+  }   
+    
+    /*cabeçalho*/
+  .cabecalho-bg{
+    padding: 15px 15px 0;
+  }
+
+  .cabecalho{
+    width: 50%;
+    padding: 0px;
+    flex-direction: column;
+  }
+
+  .foto{
+    width: 100%;
+    margin: 0;
+  }
+
+  .foto img{
+    width: 100%;
+    border-radius: 0;
+  }
+  .contato{
+    display: inline-block;
+    text-align: left;
+    margin-right: 10px;
+    flex-basis: 0px;
+    padding: 20px 5px;
+    text-align: center;
+  }
+  .contato p{
+    margin-bottom: 10px;
+  }
+
+  /*main*/
+  main{
+    width: 100%;
+    padding: 0 15px 15px 15px;
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+
+  .colunas{
+    flex-direction: column;/**/
+  }
+
+  section{
+    margin: 10px 0px;/**/
+  }
+
+  h2{
+    margin-bottom: 15px;/**/
+  }
+
+  .coluna-direita section{
+    width: auto;/**/
+  }
+
+  /*Rodapé*/
+  .footer{
+    display: none;
+  }
+
+
+}
