--- a/style.css
+++ b/style.css
@@ -662,9 +662,10 @@ label{
 label::after{
   content: 'Clique Aqui ☝';
   position: absolute;
-  bottom: -30px;
-  right: 35px;
+  bottom: -23px;
+  right: 38px;
   color:#2a76bc;
+  font-size: 0.92em;
   
   animation: girar 2.5s infinite;
 }
