--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /*Botão StarWars*/
 label{
     align-self: flex-start;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .switch {
   --toggle-size: 1;
